# ros_gpu_depthmap_fusion

./: CMakeLists.txt  LICENSE  nodelet_plugins.xml  package.xml  readme.txt
include/gpu_depthmap_fusion/: buffer_index_bindings.h  compute.h  compute_program.h  gl_compute_test.h  gl_error.h  gpu_depthmap_fusion.h  gpu_depthmap_fusion_component.h  grid_meta.h  load_shader.h  macro_min_max.h  measure_time.h  program_uniform.h  radix_grouper.h  radix_sort.h  replace_string.h  storage_buffer.h  tf2_cv.h  uint_grouper.h  voxelize.h
include/gpu_depthmap_fusion/compute/: _compute_TEMPLATE.h  compute_add_uints_times_scalar.h  compute_apply_point_mask.h  compute_chars_to_uints.h  compute_convert_depthmap_to_points.h  compute_crop_points.h  compute_decrement_uints.h  compute_filter_flying_pixels.h  compute_filter_point_sequence.h  compute_layers_connections.h  compute_max_with_uints_times_scalar.h  compute_rollbuffer_count_discarded_points.h  compute_rollbuffer_count_discarded_seqs.h  compute_rollbuffer_remaining_points_copy_and_update.h  compute_rollbuffer_remaining_points_indices.h  compute_rollbuffer_remaining_seqs_indices.h  compute_rollbuffer_select_timespan_points.h  compute_rollbuffer_select_timespan_sequences.h  compute_rollbuffer_transfer_selected_transform_indices.h  compute_rollbuffer_transfer_selected_transforms.h  compute_set_uints.h  compute_transfer_data.h  compute_transfer_data_from.h  compute_transfer_masked_data.h  compute_transform_points.h  compute_transform_points_indirect.h  compute_uints_to_chars.h  compute_uints_to_words.h  compute_vec3_to_vec4.h  compute_vec4_to_vec3.h  compute_voxel_coords.h  compute_voxel_grid_occupancy_of_points.h  compute_words_to_uints.h  compute_zero_uints.h
include/gpu_depthmap_fusion/filter/: LICENSE  README.md  const_global_velocity_filter.h  const_local_velocity_filter.h  example.cpp  filter.h  orientation_2d_filter.h  roll_pitch_yaw_filter.h  rotate_vector.h  rotated_rect_filter.h  wrap_pi.h
launch/: gdb.init  gpu_depthmap_fusion.launch
shader/: _template.glsl  add_uints_times_scalar.glsl  apply_point_mask.glsl  chars_to_uints.glsl  compute.glsl  compute_voxel_coords.glsl  convert_depthmap_to_points.glsl  crop_points.glsl  decrement_uints.glsl  filter_flying_pixels.glsl  filter_point_sequence.glsl  layers_connections.glsl  mask_dilate.glsl  max_with_uints_times_scalar.glsl  rollbuffer_count_discarded_points.glsl  rollbuffer_count_discarded_seqs.glsl  rollbuffer_remaining_points_copy_and_update.glsl  rollbuffer_remaining_points_indices.glsl  rollbuffer_remaining_seqs_indices.glsl  rollbuffer_select_timespan_points.glsl  rollbuffer_select_timespan_sequences.glsl  rollbuffer_transfer_selected_transform_indices.glsl  rollbuffer_transfer_selected_transforms.glsl  set_uints.glsl  transfer_data.glsl  transfer_data_from.glsl  transfer_masked_data.glsl  transform_points.glsl  transform_points_indirect.glsl  uints_to_chars.glsl  uints_to_words.glsl  vec3_to_vec4.glsl  vec4_to_vec3.glsl  voxel_grid_occupancy_of_points.glsl  words_to_uints.glsl  zero_uints.glsl
src/: gl_compute_test.cpp  gpu_depthmap_fusion.cpp  gpu_depthmap_fusion_component.cpp  gpu_depthmap_fusion_node.cpp  gpu_depthmap_fusion_nodelet.cpp  radix_sort.h
